--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
-## Welcome to GitHub Pages
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+    <p align="center">Моя собственная страничка!</p>
+</body>
+</html>
+
+
+
+
+<!--## Welcome to GitHub Pages
 
 You can use the [editor on GitHub](https://github.com/gabdulkhanov/gabdulkhanov.github.io/edit/master/index.md) to maintain and preview the content for your website in Markdown files.
 
@@ -34,4 +48,4 @@ Your Pages site will use the layout and styles from the Jekyll theme you have se
 
 ### Support or Contact
 
-Having trouble with Pages? Check out our [documentation](https://help.github.com/categories/github-pages-basics/) or [contact support](https://github.com/contact) and we’ll help you sort it out.
+Having trouble with Pages? Check out our [documentation](https://help.github.com/categories/github-pages-basics/) or [contact support](https://github.com/contact) and we’ll help you sort it out.-->
