--- a/index.html
+++ b/index.html
@@ -1,13 +1,80 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Урок alert, confirm, prompt</title>
-	<script src="script.js"></script>
+    <meta charset="UTF-8">
+    <title>Frontend</title>
+	<link rel="shortcut icon" href="imgs/mycomputer.png" type="image/png">
+    
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-	<h1>Lesson-2</h1>
-	<h1>Lesson-2</h1>
-	<h1>Lesson-2</h1>	
+
+<div class="container">        
+		<div class="row">			
+			<img class="col-md-12" alt="1" src="imgs/img_00036.jpg"/>				
+		</div>		
+    </div>
+	
+	<nav class="navbar navbar-default">
+		<div class="container">		
+			<div>
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#">Главная</a></li>
+					<li><a href="#">О нас</a></li>
+					<li><a href="#">Обратная связь</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+    
+	<div class="container">	
+		<div class="row">
+			<div class="col-md-8">
+				<h2>Необходимые технологии для frontend разработки</h2>
+				<ul>
+					<li>html</li>
+					<li>css</li>
+					<li>Bootstrap</li>
+					<li>Sass</li>
+					<li>gulp</li>
+					<li>Javascript</li>
+					<li>jQuery</li>
+					<li>Wordpress</li>
+					<li>angular</li>
+					<li>react</li>
+				</ul>
+			</div>
+			<div class="col-md-4">
+				<ul class="nav">
+					<li><a href="#">Главная</a></li>
+					<li><a href="#">О нас</a></li>
+					<li><a href="#">Обратная связь</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<hr>
+	<div class="container">	
+		<div class="row">
+			<div class="col-md-8">
+				<ul class="nav navbar-nav">
+					<li><a href="#">Главная</a></li>
+					<li><a href="#">О нас</a></li>
+					<li><a href="#">Обратная связь</a></li>
+				</ul>
+			</div>
+			<div class="col-md-4">
+				&copy;&nbsp;2019
+			</div>
+		</div>
+	</div>
+	
 </body>
 </html>
