--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <title>Программирование</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width">
+	
+	<link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900" rel="stylesheet">
+	
 	<link rel="shortcut icon" href="imgs/mycomputer.png" type="image/png">
-    <link rel="stylesheet" href="styles/style.css" type="text/css">		
-		
+    
+	<link rel="stylesheet" href="styles/style.css" type="text/css">	
+	<link rel="stylesheet" href="styles/header.css">	
+	
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -18,16 +23,72 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
 	integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	
+	<script
+	  src="http://code.jquery.com/jquery-2.2.4.min.js"
+	  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+	  crossorigin="anonymous"></script>
 </head>
 
 <body>
+<div class="container-fluid">
+	<div class="headerimg">					
+			<div class="headerimg-overlay"></div>		
+			<header>
+				<div class="MISOCIAL">
+					<svg id="compas" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" 
+						width="100px" height="100px" version="1.1" 
+						style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; 
+						image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+						viewBox="0 0 100 90"
+						 xmlns:xlink="http://www.w3.org/1999/xlink">
+						 <defs>
+						  <style type="text/css">
+						   <![CDATA[
+							.str0 {stroke:black;stroke-width:2.36222}
+							.fil1 {fill:blue}
+							.fil0 {fill:red}
+						   ]]>
+						  </style>
+						 </defs>
+						 <g id="Слой_x0020_1">
+						  <metadata id="CorelCorpID_0Corel-Layer"/>
+						  <polygon class="fil0 str0" points="49,11 54,28 58,46 49,46 41,46 45,28 "/>
+						  <polygon class="fil1 str0" points="49,83 45,65 41,48 49,48 58,48 54,65 "/>
+						 </g>
+					</svg>
+					PROGRAMMING
+				</div>	
+				<div class="menu">
+					<ul>
+						<li><a href="#" class="menu-link">Главная</a></li>
+						<li><a href="#" class="menu-link">Портфолио</a></li>
+						<li><a href="#" class="menu-link">Новости</a></li>
+						<li><a href="#" class="menu-link">Статьи</a></li>
+						<li><a href="#" class="menu-link">Контакты</a></li>						
+					</ul>
+				</div>
+			</header>	
+			<div class="headerimg-text">
+				<span>THEORY & PRACTICE</span>
+				<h1>Programming</h1>
+				<p>The only education I believe in is self-education</p>
+			</div>
+			<a href="#" class="headerimg-arrow">
+				<div class="arrow-down">
+					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+						x="0px" y="0px" width="16px" height="16px" viewBox="0 0 16 16">
+						<g><polygon fill="#444444" points="14.7,9.3 13.3,7.9 9,12.2 9,0 7,0 7,12.2 2.7,7.9 1.3,9.3 8,16 "/></g>
+					</svg>
+				</div>
+			</a>	
+			
+			
+	</div>	
+</div>
 
-<div class="container">
-	<header>        
-		<div class="row">			
-			<img class="img-responsive col-md-12" alt="header" src="imgs/img_00036.jpg"/>				
-		</div>		
-	  
+<div class="container-fluid">
+	<header>  
 		<nav>			
 			<div class="menu-div">
 				<ul class="menu-heder">
@@ -40,185 +101,69 @@
 			</div>		
 		</nav>
 	</header>
+	
+	<div class="sel_plan">		
+		<span>Программирование</span><br>
+		<h2>Выберите язык программирования</h2>
+	</div>
+	
+	<div class="row">
+		<div class="col-md-2"></div>	
+		<div class="select col-md-2">Pascal<hr>
+			<p>Паскаль является учебным языком программирования. 
+			Его чаще всего начинают изучать в школе и он 
+			прекрасно подходит для понимании основ программирования</p>			
+		</div>
+		<div class="select col-md-2">C/C++<hr>
+			<p>C или C++ является прикладным или системным языком программирования. 
+			С помощью него созданы множество прикладных программ, драйверов, 
+			а также операционные системы</p>	
+		</div>
+		<div class="select col-md-2">JavaScript<hr>
+			<p>JavaScript - язык, предназначенный для web-разработки. Также этот язык
+			считается самым востребованным. Ведь на нём помимо придания сайтам динамичноти,
+			есть возможность создания приложений как на клиентской стороне, так и на серверной</p>	
+		</div>			
+		<div class="select col-md-2">PHP<hr>
+			<p>PHP является серверным языком программирования. Поэтому применяется обычно с
+			системами управления базами данных, к примеру для обеспечения регистрации пользователя</p>	
+		</div>		
+		<div class="col-md-2"></div>	
+	</div>
 
 	<div class="row">
-		<div class="main col-md-8">
-			<h1>Введение в программирование</h1>
-			<p>
-				Добро пожаловать, уважаемые начинающие программисты! Сегодня мы с вами начнём изучать основы программирования. 
-				А именно, начнём с алгоритмов. Есть три вида алгоритма: линейный, ветвление, циклический. 
-				Алгоритм — это определённая последовательность команд или инструкций. Линейный алгоритм — это 
-				алгоритм, который следует друг за другом. Пример алгоритма решения задачи по физике по шагам:
-			</p>
-			<ul>
-				<li>Прочитать задачу</li>
-				<li>Записать данные из задачи</li>
-				<li>Перевести величины в систему интернациональную при необходимости</li>
-				<li>В решении записать и вывести нужные формулы</li>
-				<li>Сделать количественный расчёт</li>
-			</ul>
-			<p>
-				Таким образом, алгоритм представляет собой чёткий план конкретной задачи не только из физики, но и из 
-				жизни вообще. К примеру алгоритмом также может являться кулинарный рецепт, где по шагам объясняется 
-				как приготовить пищу.
-				Разветвляющие алгоритмы — это алгоритмы, выполняющиеся при определённом условии. К примеру, в 
-				математике мы не можем извлекать квадратный корень из отрицательного числа. Поэтому изначально 
-				здесь надо сделать проверку числа. Так же можно ещё привести пример с дорогой. Если налево повернёшь, 
-				то в лес попадёшь, если направо — в деревню. Если надо использовать множественное ветвление, то лучше 
-				использовать оператор выбора. Оператор выбора может быть полезен при составлении меню в каком-либо приложении.
-				Циклические алгоритмы — это алгоритмы, которые необходимы для многократного выполнения определённого участка 
-				программы. Циклы могут применяться, к примеру, для вывода нумерованного списка или вывода таблицы значений 
-				функции. На этих примерах, конечно, их спектр применения не заканчивается.
-			</p>
-			<p>
-				Для того, чтобы начать программировать нам необходимы инструменты, т.е. необходимые программы. В нашем случае 
-				нам нужна среда разработки (IDE), которая состоит из текстового редактора и компилятора. Текстовый редактор нужен 
-				для ввода программы, а компилятор для преобразования исходной программы в машинный код и создания исполняемого файла.
-			</p>
-			<div class="snoska">
-				<cite> Для работы на паскале есть следующие среды разработки: Turbo Pascal, Free Pascal, Pascal abc, Pascal abc.net. 
-				Если нужно создать программу с графическим интерфейсом можно использовать  Delphi</cite>
-			</div>
-			<p>
-				Turbo Pascal является устаревшим, поэтому если необходим схожий интерфейс вместо него можно использовать Free Pascal. 
-				Но мы будем работать в программе Pascal abc. Вместо него можно так же использовать Pascal abc.net. 
-				В отличие от Pascal abc в нём можно создать исполняемый файл и писать программы на платформе .Net framework. 
-				Всю необходимую информацию можно найти из других источников.
-			</p>
-			<p>
-				Итак, скачайте и установите Pascal abc или Pascal abc.net. После установки и запуска программа выглядит следующим образом:
-			</p>
-			<img alt="pas" src="imgs/pas1.jpg"/>
-			
-			<h3 id="first_program">Первая программа</h3>
-			<p>
-				По традиции первой программой у начинающих программистов является Hello world. Введите следующий текст программы:
-			</p>
-			<img alt="pas" src="imgs/pas2.jpg"/>
-			<p>
-				Чтобы запустить или скомпилировать программу нужно нажать на зелёную кнопку в виде треугольника на панели 
-				элементов или нажать F9 (на ноутбуках возможно fn+f9). В том случае если снизу появилась <span id="r_str">красная строка</span> с 
-				текстом ошибки, всё-таки попробуйте найти ошибку и исправить её. В итоге должно вывестись сообщение «Hello world!»
-			</p>
-			<img alt="pas" src="imgs/pas3.jpg"/>
-			<p>Поздравляю, вы написали свою первую программу!</p>
-			<hr>
-			<h3 id="primer1">Программа <q>Сумма чисел</q></h3>
-			<p>После успешного ввода программы «Hello world» можем двигаться дальше.
-			Далее нам представлен следующий код:</p>
-			<div class="row">
-				<div class="col-md-6">				 
-					<code>
-					program primer1;<br>
-					var a, b, sum: integer;<br>
-					begin<br>
-					write(‘Введите первое число: ‘);<br>
-					readln(a);<br>
-					write(‘Введите второе число: ‘);<br>
-					read(b);<br>
-					sum:= a + b;<br>
-					writeln(‘Сумма: ‘, sum);<br>
-					end.<br></code>				 
-				</div>
-				<div class="col-md-6">
-					<h4>Программа на Pascal abc</h4>
-					<img alt="pas" src="imgs/pas4.jpg"/>					
-				</div>
-			</div>
-			<h4>Вывод</h4>
-			<img alt="pas" src="imgs/pas5.jpg"/>
-			<p>
-				После компиляции мы увидим, что данная программа  просто складывает два числа, введённых с клавиатуры и выводит сумму.
-				Справа показано как выглядит программа на паскале и вывод после успешной компиляции. Вывод здесь показан для двух 
-				запусков, в каждом из которых вводится два значения и выводится их сумма. Таким образом, программу можем вызвать 
-				сколько угодно раз.	В первой строчке указывается название программы. <span id="b_str">program</span> <название>;
-				где вместо <название> может быть любое однословное имя, состоящее из  латинских букв, цифр, знака подчёркивания. 
-				Название не должно начинаться с цифры.
-			</p>
-			
-			<p>
-				Здесь мы можем эту строчку в программе полностью пропустить, но в больших программах же всё таки рекомендуется вводить, 
-				чтобы легче ориентироваться в коде.
-				Второй строчкой происходит объявление переменных. Объявление переменных начинается со слова var и через запятую 
-				перечисляются нужные переменные. Название переменных может содержать латинские буквы, цифры и знак подчёркивания. 
-				После двоеточия указывается тип переменных. В данном случаем integer — это целое число. Данная программа работает только 
-				над целыми числами. Дальше begin —  это начало, открывающая фигурная скобка.
-				За ввод и вывод отвечают процедуры:
-				read — процедура вводы с клавиатуры данных, при передаче переменных в скобке через запятую после запуска программы можем 
-				вводить несколько значений через пробел. 
-				readln — то же самое, что и read, но здесь ln (от слова «Line» — линия) — это перевод строки. При передаче переменных 
-				в скобке через запятую после запуска программы можем вводить несколько значений через enter.
-				Примеры:
-				<pre>
-					read(x,y);
-					readln(a,b,c);
-				</pre>
-				write — вывод данных.
-				writeln — вывод данных с переводом строки. Выводит данные, затем переводит курсор на новую строку.
-				Примеры: 
-				<pre>
-					write(‘x=’,x);
-					writeln(‘некоторый текст’);
-				</pre>
-				Далее строка 
-				<pre>sum:= a + b;</pre> 
-				<p>Здесь в правой части вычисляется сумма, введённых значений, и присваивается переменной sum. Присваивание происходит 
-				через «:=». После каждой инструкции ставится точка с запятой.
-				В конце нам необходимо вывести наше значение sum и завершить программу с командой «end.» — это закрывающая фигурная скобка.</p>  
-				<div class="snoska2">
-					<cite>Таким образом, на паскале есть следующие процедуры ввода/вывода информации: read, readln, write, writeln</cite>
-				</div>
-			</p>
-			
-			
-			<!--<nav aria-label="Page navigation">
-			  <ul class="pagination">
-				<li class="page-item"><a class="page-link" href="#">&lt;&lt;</a></li>
-				<li class="page-item"><a class="page-link" href="#">1</a></li>
-				<li class="page-item"><a class="page-link" href="#">2</a></li>
-				<li class="page-item"><a class="page-link" href="#">3</a></li>
-				<li class="page-item"><a class="page-link" href="#">&gt;&gt;</a></li>
-			  </ul>
-			</nav>	-->		
-			
-		</div>	
-		<div class="col-md-4">
-			<h4>Интересные вопросы</h4>
-				<a href="#">Построение графиков в MS Excel</a><br>
-				<img class="img-responsive" alt="exc" src="imgs/graphik.JPG"/><br>
-				<a href="#">Построение таблиц в MS Word</a><br>
-				<img class="img-responsive" alt="exc" src="imgs/tabl.JPG"/><br>				
-				<a href="#">Как переводить дробные числа в другие системы счисления?</a><br>
-				<a href="#">Как на паскале объявить массив?</a><br>
-				<a href="#">Для чего нужен flexbox?</a><br>
-				<a href="#">Как на паскале объявить одномерный массив?</a><br>
-				<a href="#">Как на паскале объявить одномерный массив?</a><br>
-				<a href="#">Как на паскале объявить одномерный массив?</a><br>
-		</div>	
+		<div class="main col-md-12" id="content">
+			<div class="gradient_upfooter"></div>			
+		</div>			
 	</div>	
-	
+</div>
+
+<div class="container-fluid">
 	<footer>		
 		<div class="row podval">
 			<div class="link_a">
 				<div class="col-md-4">
+					<h3>Useful links</h3>
 					<ul class="menu_footer">
-						<li><a href="index.html">Главная</a></li>
-						<li><a href="#first_program">Первая программа</a></li>
-						<li><a href="#primer1">Сумма чисел</a></li>
+						<li><a href="http://colorpicker.me">colorpicker</a></li>
+						<li><a href="https://cssgradient.io">gradient</a></li>
+						<li><a href="https://www.toptal.com/designers/subtlepatterns/">phone</a></li>						
 					</ul>
 				</div>
 				<div class="col-md-4">
+					<h3>Fonts and icons</h3>
 					<ul class="menu_footer">
-						<li><a href="index.html">Главная</a></li>
-						<li><a href="#first_program">Первая программа</a></li>
-						<li><a href="#primer1">Сумма чисел</a></li>
+						<li><a href="https://www.glyphicons.com">glyphicons</a></li>
+						<li><a href="https://www.iconfinder.com">iconfinder</a></li>						
+						<li><a href="http://fontawesome.ru">fontawesome</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
+					<h3>Languages</h3>
 					<ul class="menu_footer">
-						<li><a href="index.html">Главная</a></li>
-						<li><a href="#first_program">Первая программа</a></li>
-						<li><a href="#primer1">Сумма чисел</a></li>
+						<li><a href="http://htmlbook.ru">htmlbook</a></li>
+						<li><a href="https://webref.ru">webref</a></li>
+						<li><a href="https://learn.javascript.ru">javascript</a></li>
 					</ul>
 				</div>
 			</div>
@@ -226,12 +171,21 @@
 		
 		<div class="row podval cp">		
 			<div class="col-md-12 link_a">
-				Все права защищены&nbsp;&copy;&nbsp;2019
+				All rights reserved &nbsp;&copy;&nbsp;2019
 			</div>
 		</div>		
 	</footer>
 </div>
 	
+<script>
+	$(function(){
+		$('.headerimg-arrow').on('click', function(e){
+		  $('html,body').stop().animate({ scrollTop: $('.sel_plan').offset().top }, 2000);
+		  e.preventDefault();
+		});		
+	});
+</script>
+<script src="scripts/script.js"></script>		
+	
 </body>
 </html>
-
