--- a/index.html
+++ b/index.html
@@ -1,191 +1,49 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Программирование</title>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width">
-	
-	<link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900" rel="stylesheet">
-	
-	<link rel="shortcut icon" href="imgs/mycomputer.png" type="image/png">
-    
-	<link rel="stylesheet" href="styles/style.css" type="text/css">	
-	<link rel="stylesheet" href="styles/header.css">	
-	
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" 
-	integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">	
-	
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
-	integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	
-	<script
-	  src="http://code.jquery.com/jquery-2.2.4.min.js"
-	  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-	  crossorigin="anonymous"></script>
+	<meta charset="UTF-8">
+	<title>Время</title>
 </head>
-
 <body>
-<div class="container-fluid">
-	<div class="headerimg">					
-			<div class="headerimg-overlay"></div>		
-			<header>
-				<div class="MISOCIAL">
-					<svg id="compas" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" 
-						width="100px" height="100px" version="1.1" 
-						style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; 
-						image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-						viewBox="0 0 100 90"
-						 xmlns:xlink="http://www.w3.org/1999/xlink">
-						 <defs>
-						  <style type="text/css">
-						   <![CDATA[
-							.str0 {stroke:black;stroke-width:2.36222}
-							.fil1 {fill:blue}
-							.fil0 {fill:red}
-						   ]]>
-						  </style>
-						 </defs>
-						 <g id="Слой_x0020_1">
-						  <metadata id="CorelCorpID_0Corel-Layer"/>
-						  <polygon class="fil0 str0" points="49,11 54,28 58,46 49,46 41,46 45,28 "/>
-						  <polygon class="fil1 str0" points="49,83 45,65 41,48 49,48 58,48 54,65 "/>
-						 </g>
-					</svg>
-					PROGRAMMING
-				</div>	
-				<div class="menu">
-					<ul>
-						<li><a href="#" class="menu-link">Главная</a></li>
-						<li><a href="#" class="menu-link">Портфолио</a></li>
-						<li><a href="#" class="menu-link">Новости</a></li>
-						<li><a href="#" class="menu-link">Статьи</a></li>
-						<li><a href="#" class="menu-link">Контакты</a></li>						
-					</ul>
-				</div>
-			</header>	
-			<div class="headerimg-text">
-				<span>THEORY & PRACTICE</span>
-				<h1>Programming</h1>
-				<p>The only education I believe in is self-education</p>
-			</div>
-			<a href="#" class="headerimg-arrow">
-				<div class="arrow-down">
-					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-						x="0px" y="0px" width="16px" height="16px" viewBox="0 0 16 16">
-						<g><polygon fill="#444444" points="14.7,9.3 13.3,7.9 9,12.2 9,0 7,0 7,12.2 2.7,7.9 1.3,9.3 8,16 "/></g>
-					</svg>
-				</div>
-			</a>	
+
+<div id="wrap">
+	<div id="time"></div>
+</div>
+	<style>
+		#wrap {					
+			height: 600px;						
+		}
+		#time {
+			font-family: Arial, sans-serif;
+			color: #0c0;
+			background-color: #333;
+			width: 400px;
+			border: 8px double red;
+			font-size: 100px;				
+			margin: 300px auto;
+			text-align: center;				
+		}
+	</style>
+
+	<script>
 			
-			
-	</div>	
-</div>
+		var time = document.getElementById("time");
+		var k = 0;
+		setInterval(() => {
+			time.innerHTML = formatData(new Date(),k++);			
+		},1000);
 
-<div class="container-fluid">
-	<header>  
-		<nav>			
-			<div class="menu-div">
-				<ul class="menu-heder">
-					<li><a href="index.html">Главная</a></li>
-					<li><a href="#">Портфолио</a></li>
-					<li><a href="#">Новости</a></li>
-					<li><a href="#">Статьи</a></li>					
-					<li><a href="#">Контакты</a></li>
-				</ul>
-			</div>		
-		</nav>
-	</header>
-	
-	<div class="sel_plan">		
-		<span>Программирование</span><br>
-		<h2>Выберите язык программирования</h2>
-	</div>
-	
-	<div class="row">
-		<div class="col-md-2"></div>	
-		<div class="select col-md-2">Pascal<hr>
-			<p>Паскаль является учебным языком программирования. 
-			Его чаще всего начинают изучать в школе и он 
-			прекрасно подходит для понимании основ программирования</p>			
-		</div>
-		<div class="select col-md-2">C/C++<hr>
-			<p>C или C++ является прикладным или системным языком программирования. 
-			С помощью него созданы множество прикладных программ, драйверов, 
-			а также операционные системы</p>	
-		</div>
-		<div class="select col-md-2">JavaScript<hr>
-			<p>JavaScript - язык, предназначенный для web-разработки. Также этот язык
-			считается самым востребованным. Ведь на нём помимо придания сайтам динамичноти,
-			есть возможность создания приложений как на клиентской стороне, так и на серверной</p>	
-		</div>			
-		<div class="select col-md-2">PHP<hr>
-			<p>PHP является серверным языком программирования. Поэтому применяется обычно с
-			системами управления базами данных, к примеру для обеспечения регистрации пользователя</p>	
-		</div>		
-		<div class="col-md-2"></div>	
-	</div>
+		function formatData(time, n) {
+			var h = time.getHours();
+			if (h < 10)  h = "0" + h;
+			var m = time.getMinutes();
+			if (m < 10)  m = "0" + m;
+			var s = time.getSeconds();
+			if (s < 10)  s = "0" + s;
+			if (n%2 === 1)	return h + ":" + m + ":" + s;
+			else return h + " " + m + " " + s;
+		}
 
-	<div class="row">
-		<div class="main col-md-12" id="content">
-			<div class="gradient_upfooter"></div>			
-		</div>			
-	</div>	
-</div>
-
-<div class="container-fluid">
-	<footer>		
-		<div class="row podval">
-			<div class="link_a">
-				<div class="col-md-4">
-					<h3>Useful links</h3>
-					<ul class="menu_footer">
-						<li><a href="http://colorpicker.me">colorpicker</a></li>
-						<li><a href="https://cssgradient.io">gradient</a></li>
-						<li><a href="https://www.toptal.com/designers/subtlepatterns/">phone</a></li>						
-					</ul>
-				</div>
-				<div class="col-md-4">
-					<h3>Fonts and icons</h3>
-					<ul class="menu_footer">
-						<li><a href="https://www.glyphicons.com">glyphicons</a></li>
-						<li><a href="https://www.iconfinder.com">iconfinder</a></li>						
-						<li><a href="http://fontawesome.ru">fontawesome</a></li>
-					</ul>
-				</div>
-				<div class="col-md-4">
-					<h3>Languages</h3>
-					<ul class="menu_footer">
-						<li><a href="http://htmlbook.ru">htmlbook</a></li>
-						<li><a href="https://webref.ru">webref</a></li>
-						<li><a href="https://learn.javascript.ru">javascript</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		
-		<div class="row podval cp">		
-			<div class="col-md-12 link_a">
-				All rights reserved &nbsp;&copy;&nbsp;2019
-			</div>
-		</div>		
-	</footer>
-</div>
-	
-<script>
-	$(function(){
-		$('.headerimg-arrow').on('click', function(e){
-		  $('html,body').stop().animate({ scrollTop: $('.sel_plan').offset().top }, 2000);
-		  e.preventDefault();
-		});		
-	});
-</script>
-<script src="scripts/script.js"></script>		
-	
+	</script>
 </body>
 </html>
