--- a/index.html
+++ b/index.html
@@ -3,17 +3,86 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Башкортостан - мой край родной</title>
+		<link rel = "stylesheet" type="text/css" href="style.css">
 	</head>
 	
 	<body onload="fun()">
-		<h4>Участник конкурса КРИТ-2022 Габдулханов Ленар</h4>
-		<h1>Башкортостан - мой край родной</h1>
-		
-		<div id="q"></div>
-		
-		<button id="prev" onclick="funcprev()">Предыдущий</button>
-		<button id="next" onclick="funcnext()">Следующий</button>
-		
+		<div class="wrapper">
+			<h4>Участник конкурса КРИТ-2022 Габдулханов Ленар</h4>
+			<h1>Башкортостан - мой край родной</h1>
+			<ul class="nav">
+				<li onclick="main()">Основное</li>
+				<li onclick="tst()">Тестирование</li>
+				<li onclick="maps()">Карта</li>
+			</ul>
+			
+			<div id="box1" class="box1">					
+				<div class="outer">
+					<div class="inner">
+						<p>	&nbsp;Республика Башкортостан интересна богатой и красивой природой с самыми разнообразными ландшафтами, 
+						а также национальным колоритом. Столица региона расположена в городе Уфе. Башкортостан относится к 
+						Приволжскому федеральному округу, хотя с точки зрения экономики его относят к Уральскому экономическому району. </p>
+						<p>Своё название республика получила по коренному народу. Башкиры называли себя башкортами: 
+						от тюркских слов «баш» – «голова, главный» и «корт» – «волк». 
+						Тюркские народы считали волка своим прародителем. Суффикс «стан» означает «страна».</p>
+						
+						<h3>Основные данные, территория, некоторые особенности </h3> 
+						<p>23 марта 1919 года была создана Башкирская Автономная Советская республика. 
+						В феврале 1992 года она получила современное название – Республика Башкортостан.</p>
+						<p>На западе Башкирия граничит с Республикой Татарстан, на северо-западе – с Удмуртией, 
+						на севере – с Пермским краем и Свердловской областью, на востоке – с Челябинской областью, 
+						на юге и юго-западе – с Оренбургской областью.</p>
+					</div>
+					<div class="inner">
+						<img src="bash1.jpg"/>
+					</div>
+				</div>		
+
+				<p><b>Республика Башкортостан в цифрах:</b></p>
+				<ul>
+					<li>Площадь 142 947 кв. км (27-е место в России).</li>
+					<li>Протяжённость с севера на юг — 550 км, с запада на восток — 430 км.</li>
+					<li>Население 4,06 млн человек (2010 г.).</li>
+					<li>Плотность населения 28,4 чел./кв. км.</li>
+					<li>Доля городского населения 62%.</li>
+					<li>Годовой бюджет на 2022 год – 246,22 млрд руб.</li>
+				</ul>
+				<p>На территории республики 21 город: Уфа, Стерлитамак, Салават, Нефтекамск, 
+				Октябрьский, Белорецк, Туймазы, Ишимбай, Кумертау, Сибай, Мелеуз, Белебей, 
+				Бирск, Учалы, Благовещенск, Дюртюли, Янаул, Давлеканово, Баймак, Межгорье, Агидель.</p>
+
+				<h3>Пятёрка самых крупных городов:</h3>
+				<ol>
+					<li>Уфа (1,124 млн. человек),</li>
+					<li>Стерлитамак (280 тыс.),</li>
+					<li>Салават (153 тыс.)</li>
+					<li>Нефтекамск (126 тыс.),</li>
+					<li>Октябрьский (113 тыс.).</li>
+				</ol>
+				<p>Национальный состав населения: русские — 36%, башкиры — 29%, татары — 25%, 
+				чуваши — 2,7%, марийцы – 2,6% и т.д. Всего проживают представители 160 народов.</p>
+
+				<p>На территории республики два государственного языка — башкирский и русский. 
+				Много вывесок на башкирском, либо на обоих языках.</p>
+
+				<p>Настоящим литературным памятником народной словесности башкир является 
+				эпос «Урал-батыр», вобравший в себя древнюю башкирскую мифологию. Он передавался 
+				устно из поколения в поколение, был записан на бумагу лишь в начале XX века. 
+				Эпос состоит из 4 576 поэтических и 19 прозаических строк. </p>
+			</div>
+			
+			<div id="box2" class="box2">
+				<div id="q"></div>			
+				<button id="prev" onclick="funcprev()">Предыдущий</button>
+				<button id="next" onclick="funcnext()">Следующий</button>
+			</div>
+			
+			<div id="box3" class="box3">
+				<img src="bash2.jpg"/>
+			</div>
+			
+			<br>
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html> 
