--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						на юге и юго-западе – с Оренбургской областью.</p>
 					</div>
 					<div class="inner">
-						<img src="bash1.jpg"/>
+						<img src="bash1.JPG"/>
 					</div>
 				</div>		
 
